--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,6 +3,4 @@ on:
   
 jobs:
   print:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "hello"
+    uses: .github/workflows/reusable.yaml@main
