--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,4 +9,4 @@ jobs:
     uses: ./.github/workflows/reusable.yaml
     with:
       environment: ${{ inputs.environment }}
-      id: ${{ '${{ vars.ACCOUNT_ID }}' }}
+      id: ${{ vars.ACCOUNT_ID }}
