--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,4 +25,4 @@ jobs:
     uses: ./.github/workflows/reusable.yaml
     with:
       environment: ${{ inputs.environment }}
-      id: ${{ needs.env.outputs.test }}
+      id: ${{ needs.env.outputs['standby'] }}
